--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -129,6 +129,9 @@ inputs. See L</strict> for details. It is effectively identical to
 
     my $json = create_json (\%hash, %args, strict => 1);
 
+The "strict" option can be set in C<%args> without producing an error,
+but it will be overridden.
+
 [% fsince('0.20') %]
 
 =head2 write_json
@@ -140,241 +143,6 @@ the file specified in the first argument. This takes all the same
 arguments as L</create_json>, L</new> and L</set>.
 
 [% fsince('0.30') %]
-
-=head1 CONVERSIONS
-
-This section details what conversions are applied to the various
-inputs to produce outputs.
-
-=head2 Hashes
-
-JSON::Create turns associative arrays into JSON objects. The keys are
-written into JSON as strings, with control characters escaped. The
-order of the keys is as they are supplied by Perl.
-
-[% example('hash') %]
-
-Nested hashes are recursively followed:
-
-[% example('nested-hash') %]
-
-=head2 Arrays
-
-Arrays are converted to JSON arrays. The order of elements of the
-array is left unchanged.
-
-[% example('array') %]
-
-Nested arrays are recursively followed:
-
-[% example('nested-array') %]
-
-Nested hashes and arrays are converted similarly:
-
-[% example('nested') %]
-
-=head2 Scalars
-
-Non-reference Perl scalars are converted to JSON strings or numbers,
-depending on what Perl thinks they contain.
-
-=head3 Strings
-
-As far as possible, strings are written as they are to the JSON. 
-
-JSON is Unicode, so all output is checked for Unicode
-validity. Further, this module insists on UTF-8. (See L</Input strings
-must be UTF-8>.) Invalid UTF-8 within input strings produces the error
-L</Invalid UTF-8> and the undefined value is returned. [%
-see('replace_bad_utf8') %]. (For full details of the corner cases, see
-L</UNICODE HANDLING>.)
-
-Some whitespace and control characters must be also escaped for the
-output to be valid JSON. (See L</RFC 8259>.) 
-
-In addition to this, L</create_json_strict> or the L</strict> option
-reject inputs containing non-ASCII bytes (bytes with values of from
-128 to 255) which are not marked as character strings.
-
-=head4 Control characters and whitespace
-
-To form valid JSON, bytes of value less than 0x20 in a Perl string
-must be converted into JSON escapes, either the whitespace escapes \b
-(backspace) \r, \t, \n, and \f, or the form \u0001 for other control
-characters. Further, the backslash must be written as C<\\> and double
-quotes must be written as C<\">.
-
-This example demonstrates some of the necessary escaping:
-
-[% example('weirdstring') %]
-
-=head4 U+2028 and U+2029 (JavaScript clashes)
-
-    my $out = create_json (["\x{2028}"]);
-    # $out = '["\u2028"]'
-
-Although it is not required by the JSON standard, JSON::Create by
-default escapes Unicode code points U+2028 and U+2029 as C<\u2028> and
-C<\u2029> for JavaScript compatibility. [%
-see('no_javascript_safe')%].
-
-This escaping is necessary for JavaScript because of a clash between
-the JSON standard and the JavaScript (ECMAScript) standard. The
-characters U+2028 ("LINE SEPARATOR" in the Unicode standard) and
-U+2029 ("PARAGRAPH SEPARATOR" in the Unicode standard) are valid
-within JSON, as defined by L</RFC 8259>, but invalid within JavaScript
-strings, as defined by the ECMA standard (See ECMA Standard ECMA-262,
-"ECMAScript Language Specification", 3rd Edition, section 7.3 "Line
-Terminators").
-
-=head4 Other escapes
-
-The forward slash, /, known as "solidus" in the JSON specification,
-does not have to be escaped, and JSON::Create's default is not to
-escape it. [% see('escape_slash') %].
-
-Other Unicode values are not escaped.  [% see('unicode_escape_all')
-%].
-
-=head3 Integers
-
-Integers are printed in the usual way. Perl may interpret an integer
-with a very large absolute value to be a floating point number, and
-this module will print it out as such. See also L</Context-dependent
-variables> for the handling of variables with both string and integer
-values.
-
-=head3 Floating point numbers
-
-Finite floating point numbers are printed using printf formatting via
-C<"%g">, like
-
-    printf ("%g", $number);
-
-[% see('set_fformat') %]
-
-JSON does not allow NaN or infinity as bare values. From page 6 of
-L</RFC 8259>:
-
-=over
-
-Numeric values that cannot be represented in the grammar below (such
-as Infinity and NaN) are not permitted.
-
-=back
-
-L</create_json> converts NaN (not a number) values to
-C<"nan"> (the letters C<nan> surrounded by double quotes), and
-positive and negative infinity to C<"inf"> and C<"-inf">
-respectively.
-
-L</create_json_strict> disallows non-finite numbers. If a non-finite
-number appears within its input, it prints a warning L</Non-finite
-number in input> and returns the undefined value:
-
-[% example('strict-non-finite') %]
-
-A JSON::Create object created with L</new> converts in the same way as
-L</create_json>.  [% see('non_finite_handler') %]. If L</strict> is
-specified, non-finite numbers are passed to L</non_finite_handler> if
-it is set, and if not, it prints a warning L</Non-finite number in
-input> and returns the undefined value.
-
-=head3 The undefined value
-
-Undefined values in the input are mapped to the JSON literal "null".
-
-[% example('undef') %]
-
-=head3 Booleans
-
-Booleans (C<true> and C<false>) from input via JSON::Parse version
-0.37 or later will be turned into the outputs C<true> and
-C<false>:
-
-[% example('json-parse-bool') %]
-
-Other kinds of object can be converted to booleans using the method
-L</bool> (see below).
-
-=head3 Context-dependent variables
-
-A context-dependent variable is a variable which may contain a string
-and a numerical value. Usually the string value is just a
-representation of the number, but it may not be. The behaviour in the
-case of a context-dependent variable is as follows.
-
-If the variable contains a valid numerical value, the numerical value
-is used in the output JSON, rather than the string value. However,
-some modules, like L<Unicode::UCD/charinfo>, return context-dependent
-hash values which have a non-number-like string under the key
-C<script> with values such as C<Latin> or C<Common> but no valid
-numerical value, despite being marked as context-dependent
-variables. In such cases, the string value is used. (In terms of XS,
-if the scalar is marked as C<SVt_PVIV> or C<SVt_PVNV>, the scalar is
-tested with C<SvIOK> or C<SvNOK> respectively, and if this is true the
-numerical value is used, if false the string value is used.)
-
-Up to version 0.25, this module wrongly assumed that the string part
-of a context-dependent variable would always be a valid representation
-of a number, and the string was added to the output without quote
-marks. In version 0.26, checking was done to see if the string
-actually was a number. In version 0.27 this approach was abandoned and
-the numerical value was given precedence. In version 0.28 this was
-again altered for the sake of unusual cases like the C<script> key
-returned by L<Unicode::UCD/charinfo>, where the scalar is marked as
-having a numerical value but does not in fact contain a valid
-numerical value.
-
-=head2 Other types
-
-JSON::Create is meant to provide serialization of data types. It does
-not provide built-in serialization of Perl objects and other non-data
-types, such as code references or regular expressions, beyond a few
-basic defaults. How to handle non-data types is left completely up to
-users. These basic defaults, and how to set up more extensive
-handling, are described in the following subsections.
-
-=head3 Scalar references
-
-L</create_json> dereferences scalar references, then treats them as
-scalars in the way described in L</Scalars>. 
-
-L</create_json_strict> rejects scalar references. Input containing a
-scalar reference causes a warning L</Input's type cannot be serialized
-to JSON> and the undefined value to be returned.
-
-A JSON::Create object created with L</new> behaves as L</create_json>
-unless the L</strict> option is specified. If the strict option is
-specified, scalar references are passed through to L</type_handler> if
-it is set, otherwise input containing a scalar reference causes a
-warning L</Input's type cannot be serialized to JSON> and the
-undefined value to be returned.
-
-=head3 Objects
-
-L</create_json> handles Perl objects as if non-object
-types. In other words, unless you specify object handling, it breaks
-encapsulation. 
-
-L</create_json_strict> rejects input containing Perl objects. If the
-input contains an object (a blessed reference), a warning L</Object
-cannot be serialized to JSON> is printed and the undefined value
-returned.
-
-A JSON::Create object created with L</new> can handle specified types
-of object with method L</obj>, or with a general object handler
-supplied via L</obj_handler>. By default it behaves like
-L</create_json>. If L</strict> is chosen, it rejects input containing
-Perl objects unless the user sets a handler for them with L</obj> or
-L</obj_handler>.
-
-=head3 Code, regexes, and other references
-
-A code or other reference (regexes, globs, etc.) in the input of
-L</create_json> or L</create_json_strict> prints a warning L</Input's
-type cannot be serialized to JSON> and causes the entire return value
-to be the undefined value. [% see('type_handler') %].
 
 =head1 METHODS
 
@@ -867,6 +635,241 @@ undefined.
 
 [% since('0.07') %]
 
+=head1 CONVERSIONS
+
+This section details what conversions are applied to the various
+inputs to produce outputs.
+
+=head2 Hashes
+
+JSON::Create turns associative arrays into JSON objects. The keys are
+written into JSON as strings, with control characters escaped. The
+order of the keys is as they are supplied by Perl.
+
+[% example('hash') %]
+
+Nested hashes are recursively followed:
+
+[% example('nested-hash') %]
+
+=head2 Arrays
+
+Arrays are converted to JSON arrays. The order of elements of the
+array is left unchanged.
+
+[% example('array') %]
+
+Nested arrays are recursively followed:
+
+[% example('nested-array') %]
+
+Nested hashes and arrays are converted similarly:
+
+[% example('nested') %]
+
+=head2 Scalars
+
+Non-reference Perl scalars are converted to JSON strings or numbers,
+depending on what Perl thinks they contain.
+
+=head3 Strings
+
+As far as possible, strings are written as they are to the JSON. 
+
+JSON is Unicode, so all output is checked for Unicode
+validity. Further, this module insists on UTF-8. (See L</Input strings
+must be UTF-8>.) Invalid UTF-8 within input strings produces the error
+L</Invalid UTF-8> and the undefined value is returned. [%
+see('replace_bad_utf8') %]. (For full details of the corner cases, see
+L</UNICODE HANDLING>.)
+
+Some whitespace and control characters must be also escaped for the
+output to be valid JSON. (See L</RFC 8259>.) 
+
+In addition to this, L</create_json_strict> or the L</strict> option
+reject inputs containing non-ASCII bytes (bytes with values of from
+128 to 255) which are not marked as character strings.
+
+=head4 Control characters and whitespace
+
+To form valid JSON, bytes of value less than 0x20 in a Perl string
+must be converted into JSON escapes, either the whitespace escapes \b
+(backspace) \r, \t, \n, and \f, or the form \u0001 for other control
+characters. Further, the backslash must be written as C<\\> and double
+quotes must be written as C<\">.
+
+This example demonstrates some of the necessary escaping:
+
+[% example('weirdstring') %]
+
+=head4 U+2028 and U+2029 (JavaScript clashes)
+
+    my $out = create_json (["\x{2028}"]);
+    # $out = '["\u2028"]'
+
+Although it is not required by the JSON standard, JSON::Create by
+default escapes Unicode code points U+2028 and U+2029 as C<\u2028> and
+C<\u2029> for JavaScript compatibility. [%
+see('no_javascript_safe')%].
+
+This escaping is necessary for JavaScript because of a clash between
+the JSON standard and the JavaScript (ECMAScript) standard. The
+characters U+2028 ("LINE SEPARATOR" in the Unicode standard) and
+U+2029 ("PARAGRAPH SEPARATOR" in the Unicode standard) are valid
+within JSON, as defined by L</RFC 8259>, but invalid within JavaScript
+strings, as defined by the ECMA standard (See ECMA Standard ECMA-262,
+"ECMAScript Language Specification", 3rd Edition, section 7.3 "Line
+Terminators").
+
+=head4 Other escapes
+
+The forward slash, /, known as "solidus" in the JSON specification,
+does not have to be escaped, and JSON::Create's default is not to
+escape it. [% see('escape_slash') %].
+
+Other Unicode values are not escaped.  [% see('unicode_escape_all')
+%].
+
+=head3 Integers
+
+Integers are printed in the usual way. Perl may interpret an integer
+with a very large absolute value to be a floating point number, and
+this module will print it out as such. See also L</Context-dependent
+variables> for the handling of variables with both string and integer
+values.
+
+=head3 Floating point numbers
+
+Finite floating point numbers are printed using printf formatting via
+C<"%g">, like
+
+    printf ("%g", $number);
+
+[% see('set_fformat') %]
+
+JSON does not allow NaN or infinity as bare values. From page 6 of
+L</RFC 8259>:
+
+=over
+
+Numeric values that cannot be represented in the grammar below (such
+as Infinity and NaN) are not permitted.
+
+=back
+
+L</create_json> converts NaN (not a number) values to
+C<"nan"> (the letters C<nan> surrounded by double quotes), and
+positive and negative infinity to C<"inf"> and C<"-inf">
+respectively.
+
+L</create_json_strict> disallows non-finite numbers. If a non-finite
+number appears within its input, it prints a warning L</Non-finite
+number in input> and returns the undefined value:
+
+[% example('strict-non-finite') %]
+
+A JSON::Create object created with L</new> converts in the same way as
+L</create_json>.  [% see('non_finite_handler') %]. If L</strict> is
+specified, non-finite numbers are passed to L</non_finite_handler> if
+it is set, and if not, it prints a warning L</Non-finite number in
+input> and returns the undefined value.
+
+=head3 The undefined value
+
+Undefined values in the input are mapped to the JSON literal "null".
+
+[% example('undef') %]
+
+=head3 Booleans
+
+Booleans (C<true> and C<false>) from input via JSON::Parse version
+0.37 or later will be turned into the outputs C<true> and
+C<false>:
+
+[% example('json-parse-bool') %]
+
+Other kinds of object can be converted to booleans using the method
+L</bool> (see below).
+
+=head3 Context-dependent variables
+
+A context-dependent variable is a variable which may contain a string
+and a numerical value. Usually the string value is just a
+representation of the number, but it may not be. The behaviour in the
+case of a context-dependent variable is as follows.
+
+If the variable contains a valid numerical value, the numerical value
+is used in the output JSON, rather than the string value. However,
+some modules, like L<Unicode::UCD/charinfo>, return context-dependent
+hash values which have a non-number-like string under the key
+C<script> with values such as C<Latin> or C<Common> but no valid
+numerical value, despite being marked as context-dependent
+variables. In such cases, the string value is used. (In terms of XS,
+if the scalar is marked as C<SVt_PVIV> or C<SVt_PVNV>, the scalar is
+tested with C<SvIOK> or C<SvNOK> respectively, and if this is true the
+numerical value is used, if false the string value is used.)
+
+Up to version 0.25, this module wrongly assumed that the string part
+of a context-dependent variable would always be a valid representation
+of a number, and the string was added to the output without quote
+marks. In version 0.26, checking was done to see if the string
+actually was a number. In version 0.27 this approach was abandoned and
+the numerical value was given precedence. In version 0.28 this was
+again altered for the sake of unusual cases like the C<script> key
+returned by L<Unicode::UCD/charinfo>, where the scalar is marked as
+having a numerical value but does not in fact contain a valid
+numerical value.
+
+=head2 Other types
+
+JSON::Create is meant to provide serialization of data types. It does
+not provide built-in serialization of Perl objects and other non-data
+types, such as code references or regular expressions, beyond a few
+basic defaults. How to handle non-data types is left completely up to
+users. These basic defaults, and how to set up more extensive
+handling, are described in the following subsections.
+
+=head3 Scalar references
+
+L</create_json> dereferences scalar references, then treats them as
+scalars in the way described in L</Scalars>. 
+
+L</create_json_strict> rejects scalar references. Input containing a
+scalar reference causes a warning L</Input's type cannot be serialized
+to JSON> and the undefined value to be returned.
+
+A JSON::Create object created with L</new> behaves as L</create_json>
+unless the L</strict> option is specified. If the strict option is
+specified, scalar references are passed through to L</type_handler> if
+it is set, otherwise input containing a scalar reference causes a
+warning L</Input's type cannot be serialized to JSON> and the
+undefined value to be returned.
+
+=head3 Objects
+
+L</create_json> handles Perl objects as if non-object
+types. In other words, unless you specify object handling, it breaks
+encapsulation. 
+
+L</create_json_strict> rejects input containing Perl objects. If the
+input contains an object (a blessed reference), a warning L</Object
+cannot be serialized to JSON> is printed and the undefined value
+returned.
+
+A JSON::Create object created with L</new> can handle specified types
+of object with method L</obj>, or with a general object handler
+supplied via L</obj_handler>. By default it behaves like
+L</create_json>. If L</strict> is chosen, it rejects input containing
+Perl objects unless the user sets a handler for them with L</obj> or
+L</obj_handler>.
+
+=head3 Code, regexes, and other references
+
+A code or other reference (regexes, globs, etc.) in the input of
+L</create_json> or L</create_json_strict> prints a warning L</Input's
+type cannot be serialized to JSON> and causes the entire return value
+to be the undefined value. [% see('type_handler') %].
+
 =head1 EXPORTS
 
 The module exports nothing except by request. Two functions,
@@ -1110,7 +1113,7 @@ Arguments to L</create_json> and L</create_json_strict>, and the
 methods L</set>, L</sort> and L</cmp> were added in version 0.29.
 
 Version 0.30 rewrote L</set> and related routines in XS and increased
-the speed of the module.
+the speed of the module, and added L</write_json>.
 
 =head1 SEE ALSO
 
