Path to benchmark output in template

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -1061,7 +1061,7 @@ L<Cpanel::JSON::XS>. Outputs look like this, where the "improve"
 column is the improvement in speed of the fastest module compared to
 the slowest:
 
-[% INCLUDE "/home/ben/projects/json-create/bench/bench.output" | indent (4) %]
+[% INCLUDE "bench/bench.output" | indent (4) %]
 
 =head1 BUGS
 
