--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -1165,6 +1165,11 @@ to Perl XS programmers here:
 
 =item L<av_fetch can return NULL|http://blogs.perl.org/users/ben_bullock/2020/02/av-fetch-can-return-null.html>
 
+=item L<Muddled numbers & strings|https://benbullock.substack.com/p/muddled-numbers-and-strings>
+
+This relates to the bug dealing with floating point and integer
+numbers found in version 0.33.
+
 =back
 
 [% INCLUDE "author" %]
